Use spring jta instead of hibernate tenants
- Code cleaning